# d2-mcp-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: client-configs.md  demo.d2  security-model.md  tools.md
examples/: simple.d2
src/: lib.rs  main.rs  mcp.rs
tests/: mcp_smoke.rs
