[package]
name = "d2-mcp"
version = "0.1.0"
edition = "2024"
description = "Production-grade Rust MCP server for validating, formatting, and rendering D2 diagrams."
license = "MIT"
repository = "https://github.com/Stranmor/d2-mcp-rs"
readme = "README.md"
keywords = ["mcp", "d2", "diagram", "agent", "rmcp"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
rmcp = { version = "1.8.0", features = ["client", "server", "transport-io", "schemars"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tempfile = "3.23.0"
tokio = { version = "1.49.0", features = ["io-std", "io-util", "macros", "rt-multi-thread"] }
wait-timeout = "0.2.1"

[dev-dependencies]
anyhow = "1.0.100"
